--- a/src/components/category-selection/category-selection.style.css
+++ b/src/components/category-selection/category-selection.style.css
@@ -51,6 +51,18 @@
     height: 250px;
     background-size: cover;
 }
+.thumbbox {
+    border-radius: 10px;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    padding: 10px 25px;
+    text-align: center;
+    display: block;
+    margin-top: 60px;
+    width:250px;
+    display: inline-block;
+    height: 250px;
+    background-size: cover;
+}
 .info h4 {
     color: #ffffff;
     font-size: 26px;
