--- a/src/components/category-selection/category-selection.template.html
+++ b/src/components/category-selection/category-selection.template.html
@@ -149,7 +149,7 @@
       }
     });
   </script>
-  <!--<script src="bower_components/chart.js/dist/Chart.js"></script>
+  <script src="bower_components/chart.js/dist/Chart.js"></script>
   <script>
     var ctx = document.getElementById("myPieChart");
     var myChart = new Chart(ctx, {
@@ -165,6 +165,6 @@
         }]
       }
     });
-  </script> -->
+  </script>
 
 </html>
