remove main component

--- a/src/components/login-page/login-page.template.html
+++ b/src/components/login-page/login-page.template.html
@@ -27,7 +27,7 @@
 			</div>
 
 			<div class="form-group ">
-				<button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-click="$ctrl.submit(); $ctrl.main()">Login</button>
+				<button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-click="$ctrl.submit(); $ctrl.enterJourney()">Login</button>
 			</div>
 			<div class="login-register">
 				<p> <small> Don't have an account yet? </small></p>
