Worked on the Calculation Algorithm
Started implementing the calculation algorithm

--- a/src/components/category-selection/category-selection.template.html
+++ b/src/components/category-selection/category-selection.template.html
@@ -40,13 +40,7 @@
                 <div class="box4">
                   <div class="info">
                     <h4 class="text-center">Museums</h4>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
+                    <br> <br> <br> <br> <br> <br> <br>
                     <input id="ex2" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14"/>
                   </div>
                 </div>
@@ -55,13 +49,7 @@
                 <div class="box5">
                   <div class="info">
                     <h4 class="text-center">Parks</h4>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
+                    <br> <br> <br> <br> <br> <br> <br>
                     <input id="ex3" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14"/>
                   </div>
                 </div>
@@ -70,13 +58,7 @@
                 <div class="box6">
                   <div class="info">
                     <h4 class="text-center">Churches</h4>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
+                    <br> <br> <br> <br> <br> <br> <br>
                     <input id="ex4" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="20" data-slider-step="1" data-slider-value="14"/>
                   </div>
                 </div>
@@ -116,14 +98,7 @@
 
      </div>
 
-
-
-
-
-
-
-
-
+     <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="$ctrl.calculate()"> <h2> Receive the best Schedule</h2> </button>
 
 
   </div>
@@ -158,7 +133,7 @@
       }
     });
   </script>
-  <script src="bower_components/chart.js/dist/Chart.js"></script>
+  <!-- <script src="bower_components/chart.js/dist/Chart.js"></script>
   <script>
     var ctx = document.getElementById("myPieChart");
     var myChart = new Chart(ctx, {
@@ -174,6 +149,6 @@
         }]
       }
     });
-  </script>
+  </script> -->
 
 </html>
