--- a/src/components/category-selection/category-selection.style.css
+++ b/src/components/category-selection/category-selection.style.css
@@ -51,6 +51,17 @@
     height: 250px;
     background-size: cover;
 }
+.box7 {
+  border-radius: 10px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  padding: 10px 25px;
+  text-align: right;
+  display: block;
+  margin-top: 60px;
+  display: inline-block;
+  background-size: cover;
+}
+
 
 .thumbbox {
     border-radius: 10px;
@@ -63,6 +74,9 @@
     display: inline-block;
     height: 250px;
     background-size: cover;
+}
+.thumbbox attraction.title{
+  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTB9NgM9e3wVM0YzBGuFmjyN0pTYJoBfN-SVWWhFLEeYjxULse5');
 }
 .info h4 {
     color: #ffffff;
