Added functionality to display Trips

--- a/src/components/app-header/app-header.template.html
+++ b/src/components/app-header/app-header.template.html
@@ -2,6 +2,7 @@
   <div class="container-fluid">
    <ul class="nav navbar-nav navbar-right">
       <li><a ng-click="$ctrl.selectCategories()">DEV Categories</a></li>
+          <li><a ng-click="$ctrl.showTravel()">DEV Travel</a></li>
       <li><a ng-click="$ctrl.partners()">Partners</a></li>
       <li><a ng-click="$ctrl.about()">About</a></li>
       <li ng-if="!$ctrl.isAuthenticated()" ng-click="$ctrl.home()"><a> Login </a></li>
