--- a/src/components/category-selection/category-selection.style.css
+++ b/src/components/category-selection/category-selection.style.css
@@ -39,7 +39,7 @@
     background-size: cover;
 }
 .box6 {
-    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTB9NgM9e3wVM0YzBGuFmjyN0pTYJoBfN-SVWWhFLEeYjxULse5');
+    background-image: url('http://res.muenchen-p.de/.imaging/stk/responsive/image300/dms/sw/bg/kirchen_und_kloester/bildergalerien/frauenkirche/03-frauenkirche-innen/document/03-frauenkirche-innen.jpg');
     border-radius: 10px;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     padding: 10px 25px;
@@ -53,7 +53,7 @@
 }
 .box7 {
   border-radius: 10px;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.7) , 0 2px 10px 0 rgba(0, 0, 0, 0.7) ;
   padding: 10px 25px;
   text-align: right;
   display: block;
@@ -75,7 +75,7 @@
     height: 250px;
     background-size: cover;
 }
-.thumbbox attraction.title{
+.thumbbox {
   background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTB9NgM9e3wVM0YzBGuFmjyN0pTYJoBfN-SVWWhFLEeYjxULse5');
 }
 .info h4 {
@@ -90,4 +90,15 @@
 }
 #ex1Slider .slider-handle {
 	background: blue;
+}
+
+.full-background-image1 {
+  background-image: url('https://raw.githubusercontent.com/ragnhildneset/plan-your-holiday-frontend/master/src/img/Prague.jpg');
+  height: 300%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  background-color: #bdbdbd;
+
 }
