--- a/src/components/category-selection/category-selection.template.html
+++ b/src/components/category-selection/category-selection.template.html
@@ -12,7 +12,7 @@
     <![endif]-->
   </head>
 
-  <div class="full-background-image">
+  <div class="full-background-image1">
 
     <header class="jumbotron">
       <div class="inner cover">
@@ -20,17 +20,19 @@
         <p>Select your Category Preferences for the upcoming trips</p>
       </div>
     </header>
+
     <div class= "panel panel-default">
-      <div class="panel-body">
+    <div class="panel-body">
     <div class="container">
       <div class="row">
         <div class="col">
           <div class="container">
+            <h4 class="text-center"><strong>Choose your category density with the slider!</strong></h4>
             <div class="row">
               <div class="col-md-3">
                 <div class="box3">
                   <div class="info">
-                    <h4 class="text-center">Monuments</h4>
+                    <h4 class="text-center"><strong>Monuments</strong></h4>
                     <br> <br> <br> <br> <br> <br> <br>
                     <input id="Monuments" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="10" data-slider-step="1" data-slider-value="0"/>
                   </div>
@@ -39,7 +41,7 @@
               <div class="col-md-3">
                 <div class="box4">
                   <div class="info">
-                    <h4 class="text-center">Museums</h4>
+                    <h4 class="text-center"><strong>Museums</strong></h4>
                     <br> <br> <br> <br> <br> <br> <br>
                     <input id="Museums" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="10" data-slider-step="1" data-slider-value="0"/>
                   </div>
@@ -48,7 +50,7 @@
               <div class="col-md-3">
                 <div class="box5">
                   <div class="info">
-                    <h4 class="text-center">Parks</h4>
+                    <h4 class="text-center"><strong>Parks</strong></h4>
                     <br> <br> <br> <br> <br> <br> <br>
                     <input id="Parks" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="10" data-slider-step="1" data-slider-value=""/>
                   </div>
@@ -57,7 +59,7 @@
               <div class="col-md-3">
                 <div class="box6">
                   <div class="info">
-                    <h4 class="text-center">Churches</h4>
+                    <h4 class="text-center"><strong>Churches</strong></h4>
                     <br> <br> <br> <br> <br> <br> <br>
                     <input id="Churches" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="10" data-slider-step="1" data-slider-value="0"/>
                   </div>
@@ -99,7 +101,7 @@
        </div>
 
      </div>
-
+     <br> <br>
      <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="$ctrl.calculate()"> <h2> Receive the best Schedule</h2> </button>
 
 
