--- a/src/components/app-header/app-header.template.html
+++ b/src/components/app-header/app-header.template.html
@@ -2,10 +2,11 @@
   <div class="container-fluid">
    <ul class="nav navbar-nav navbar-right">
       <li><a ng-click="$ctrl.selectCategories()">DEV Categories</a></li>
-          <li><a ng-click="$ctrl.showTravel()">DEV Travel</a></li>
+      <li><a ng-click="$ctrl.showTravel()">DEV Travel</a></li>
+      <li><a ng-click="$ctrl.enterJourney()">DEV Enter Journes</a></li>
       <li><a ng-click="$ctrl.partners()">Partners</a></li>
       <li><a ng-click="$ctrl.about()">About</a></li>
-      <li ng-if="!$ctrl.isAuthenticated()" ng-click="$ctrl.home()"><a> Login </a></li>
+      <li ng-if="!$ctrl.isAuthenticated()" ng-click="$ctrl.login()"><a> Login </a></li>
       <li ng-if="$ctrl.isAuthenticated()"><a>{{$ctrl.getCurrentUser()}}</a></li>
     </ul>
  </div>
