--- a/src/components/entry-page/entry-page.template.html
+++ b/src/components/entry-page/entry-page.template.html
@@ -48,53 +48,48 @@
     <br>
     <br>
     <div class="jumbotron2">
-    <div class="container-fluid">
-              <form method="post" action="#">
-                <div class="col-md-6 form-line">
-                  <div class="form-group">
-                    <h3 class="cols-sm-2 control-label">Enter your Account details</h3>
-                  </div>
-                  <div class="form-group">
-                    <label for="username" class="cols-sm-2 control-label">Username</label>
-                    <div class="input-group">
-                      <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                      <input type="text" class="form-control" name="username" id="username" ng-model="$ctrl.login.username"  placeholder="Enter your Username"/>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="password" class="cols-sm-2 control-label">Password</label>
-                    <div class="input-group">
-                      <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-                      <input type="password" class="form-control" name="password" id="password" ng-model="$ctrl.login.password"  placeholder="Enter your Password"/>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                  <p> <small> Forgot password? </small></p>
-                 </div>
-                  <div class="form-group">
-                    <button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-click="$ctrl.login()">Login</button>
-			               </div>
-
-                   </div>
-
-
-
-                   <div class="col-md-6 form-line">
-                     <div class="form-group">
-                       <h3 class="control-label">Register now for free!</h3>
-                       <br>
-                       <br>
-                       <br>
-                       <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="$ctrl.getStarted()">Register</button>
-                     </div>
-                   </div>
-                 </form>
+      <div class="container-fluid">
+        <form method="post" action="#">
+          <div class="col-md-6 form-line">
+            <div class="form-group">
+              <h3 class="cols-sm-2 control-label">Enter your Account details</h3>
+            </div>
+            <div class="form-group">
+              <label for="username" class="cols-sm-2 control-label">Username</label>
+              <div class="input-group">
+                <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+                <input type="text" class="form-control" name="username" id="username" ng-model="$ctrl.login.username"  placeholder="Enter your Username"/>
               </div>
+            </div>
+            <div class="form-group">
+              <label for="password" class="cols-sm-2 control-label">Password</label>
+              <div class="input-group">
+                <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+                <input type="password" class="form-control" name="password" id="password" ng-model="$ctrl.login.password"  placeholder="Enter your Password"/>
               </div>
+            </div>
+            <div class="form-group">
+              <p> <small> Forgot password? </small></p>
+            </div>
+            <div class="form-group">
+              <button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-click="$ctrl.submit()">Login</button>
+            </div>
+          </div>
+
+         <div class="col-md-6 form-line">
+           <div class="form-group">
+             <h3 class="control-label">Register now for free!</h3>
+             <br> <br> <br>
+             <button type="button" class="btn btn-primary btn-lg btn-block" ng-click="$ctrl.getStarted()">Register</button>
+           </div>
+         </div>
+        </form>
+      </div>
+    </div>
 
               <br>
               <br>
-              
+
 
               <div class="row">
                 <div class="col-md-3">
