Started Linking Pages
Started connecting the different content

--- a/src/components/app-header/app-header.template.html
+++ b/src/components/app-header/app-header.template.html
@@ -3,7 +3,7 @@
    <ul class="nav navbar-nav navbar-right">
       <li><a ng-click="$ctrl.selectCategories()">DEV Categories</a></li>
       <li><a ng-click="$ctrl.showTravel()">DEV Travel</a></li>
-      <li><a ng-click="$ctrl.enterJourney()">DEV Enter Journes</a></li>
+      <li><a ng-click="$ctrl.enterJourney()">DEV Enter Journey</a></li>
       <li><a ng-click="$ctrl.partners()">Partners</a></li>
       <li><a ng-click="$ctrl.about()">About</a></li>
       <li ng-if="!$ctrl.isAuthenticated()" ng-click="$ctrl.login()"><a> Login </a></li>
