fixed user login

--- a/src/components/app-header/app-header.template.html
+++ b/src/components/app-header/app-header.template.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
    <ul class="nav navbar-nav navbar-right">
+      <li><a ng-click="$ctrl.home()">Home</a></li>
       <li><a ng-click="$ctrl.selectCategories()">DEV Categories</a></li>
       <li><a ng-click="$ctrl.showTravel()">DEV Travel</a></li>
       <li><a ng-click="$ctrl.enterJourney()">DEV Enter Journes</a></li>
