--- a/src/components/view-travel/view-travel.template.html
+++ b/src/components/view-travel/view-travel.template.html
@@ -1,10 +1,7 @@
-	<md-list>
+<md-list>
+    <md-list-item aria-label="travel" ng-click="$ctrl.details(travel)" class="noright" ng-repeat="travel in $ctrl.travel.schedule">
+        <p> {{travel._id}} </p>
 
-    <md-list-item aria-label="travel" ng-click="$ctrl.details(travel)" class="noright" ng-repeat="travel in $ctrl.travel">
-        <p> {{travel.username}} </p>
-        
-        
-             
         <md-button class="md-icon-button" aria-label="Edit Item" ng-click="$ctrl.edit(travel)" >
             <md-icon><ng-md-icon icon="mode_edit"></ng-md-icon></md-icon>
         </md-button>
@@ -15,7 +12,6 @@
         <md-divider ng-if="!$last"></md-divider>
     </md-list-item>
     <md-divider></md-divider>
-
 </md-list>
 <md-button class="md-fab md-fab-bottom-right md-ink-ripple" aria-label="New travel" ng-click="$ctrl.newtravel()">
     <md-icon><ng-md-icon icon="add"></ng-md-icon></md-icon>
