--- a/src/components/feedback/feedback.template.html
+++ b/src/components/feedback/feedback.template.html
@@ -1,1 +1,23 @@
-HAAAALLLOIS
+<h1>Please review your travel</h1>
+<div class="rating-card-container">
+  <div ng-repeat="activity in $ctrl.travel[0].schedule">
+    <div class="card">
+       <div class="container">
+         <h2 class="card-title">{{activity.attractionName }}</h2>
+         <br/>
+         <h5><b>Quality</b></h5>
+         <p>How well did you like the activity?</p>
+         <span uib-rating ng-model="$ctrl.rating[activity.attractionId].quality" max="5" read-only="isReadonly" on-leave="overStar = null" aria-labelledby="default-rating"></span>
+         <br/>
+         <br/>
+         <h5><b>Popularity</b></h5>
+          <p>How popular is this activity among tourists?</p>
+         <span uib-rating ng-model="$ctrl.rating[activity.attractionId].popularity" max="5" read-only="isReadonly" on-leave="overStar = null" aria-labelledby="default-rating"></span>
+         <br/>
+       </div>
+  </div>
+  </div>
+
+</div>
+
+<script type="text/javascript" src="node_modules/angular-ui-bootstrap/src/rating/rating.js"></script>
