--- a/src/components/app-header/app-header.template.html
+++ b/src/components/app-header/app-header.template.html
@@ -8,7 +8,7 @@
       <li><a ng-click="$ctrl.partners()">Partners</a></li>
       <li><a ng-click="$ctrl.about()">About</a></li>
       <li ng-if="!$ctrl.isAuthenticated()" ng-click="$ctrl.login()"><a> Login </a></li>
-      <li ng-if="$ctrl.isAuthenticated()"><a>{{$ctrl.getCurrentUser()}}</a></li>
+      <li ng-if="$ctrl.isAuthenticated()" ng-click="$ctrl.editUser()"><a>{{$ctrl.getCurrentUser()}}</a></li>
     </ul>
  </div>
 </nav>
