--- a/src/components/app-content/app-content.template.html
+++ b/src/components/app-content/app-content.template.html
@@ -14,5 +14,6 @@
             </ui-view>
             <span flex="0"></span>
         </ng-content>
+        <app-footer></app-footer>
     </div>
 </div>
