--- a/src/components/app-getstarted/app-getstarted.template.html
+++ b/src/components/app-getstarted/app-getstarted.template.html
@@ -7,7 +7,7 @@
       </div>
 
   		<div class="form-group">
-  			<label for="name" class="cols-sm-2 control-label">Your Name</label>
+  			<label for="name" class="cols-sm-2 control-label">First and Last Name</label>
   			<div class="cols-sm-10">
   				<div class="input-group">
   					<span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
@@ -27,7 +27,7 @@
   		</div>
 
   		<div class="form-group">
-  			<label for="username" class="cols-sm-2 control-label">Username</label>
+  			<label for="username" class="cols-sm-2 control-label">Login ID</label>
   			<div class="cols-sm-10">
   				<div class="input-group">
   					<span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
@@ -88,10 +88,10 @@
   			</div>
 
   		<div class="form-group ">
-  			<button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-click="$ctrl.signup(); $ctrl.enterJourney()">Register</button>
+  			<button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-click="$ctrl.signup()">Submit</button>
   		</div>
   		<div class="login-register">
-  			<p> <small> Already got an account? </small></p>
+  			<p>  <font color = "white" size="1"> Already got an account? </font></small></p>
         <a ng-click="$ctrl.login()">Login</a>
       </div>
   	</form>
