--- a/src/components/feedback/feedback.style.css
+++ b/src/components/feedback/feedback.style.css
@@ -4,6 +4,12 @@
   margin: 40px;
 }
 
+.white-background {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+}
+
 .card {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
