--- a/src/components/feedback/feedback.template.html
+++ b/src/components/feedback/feedback.template.html
@@ -1,22 +1,31 @@
-<h1>Please review your travel</h1>
-<div class="rating-card-container">
-  <div ng-repeat="activity in $ctrl.travel[0].schedule">
-    <div class="card">
-       <div class="container">
-         <h2 class="card-title">{{activity.attractionName }}</h2>
-         <br/>
-         <h5><b>Quality</b></h5>
-         <p>How well did you like the activity?</p>
-         <span uib-rating ng-model="$ctrl.rating[activity.attractionId].quality" max="5" read-only="isReadonly" on-leave="overStar = null" aria-labelledby="default-rating"></span>
-         <br/>
-         <br/>
-         <h5><b>Popularity</b></h5>
-          <p>How popular is this activity among tourists?</p>
-         <span uib-rating ng-model="$ctrl.rating[activity.attractionId].popularity" max="5" read-only="isReadonly" on-leave="overStar = null" aria-labelledby="default-rating"></span>
-         <br/>
-       </div>
-  </div>
-  </div>
+<div class="full-background-image">
+  <header class="jumbotron">
+     <div class="inner cover">
+        <h1 class="cover-heading">Welcome</h1>
+        <p class="lead">Where will you go next?</p>
+      </div>
+  </header>
+    <div class="white-background">
+      <div class="rating-card-container">
+        <div ng-repeat="activity in $ctrl.travel[0].schedule">
+          <div class="card">
+             <div class="container">
+               <h2 class="card-title">{{ activity.attractionName }}</h2>
+               <br/>
+               <h5><b>Quality</b></h5>
+               <p>How well did you like the activity?</p>
+               <span uib-rating ng-model="$ctrl.rating[activity.attractionId].quality" max="5" read-only="isReadonly" on-leave="overStar = null" aria-labelledby="default-rating"></span>
+               <br/>
+               <br/>
+               <h5><b>Popularity</b></h5>
+                <p>How popular is this activity among tourists?</p>
+               <span uib-rating ng-model="$ctrl.rating[activity.attractionId].popularity" max="5" read-only="isReadonly" on-leave="overStar = null" aria-labelledby="default-rating"></span>
+               <br/>
+             </div>
+          </div>
+      </div>
+    </div>
+    </div>
 
 </div>
 
