--- a/src/components/login-page/login-page.template.html
+++ b/src/components/login-page/login-page.template.html
@@ -1,40 +1,39 @@
+
 <div class="full-background-image">
 	<div class="main-login main-center">
-		<form method="post" action="#">
-
-	    <div class="form-group">
-	      <h3 class="cols-sm-2 control-label">Enter your Account details</h3>
-	    </div>
-
-			<div class="form-group">
-				<label for="username" class="cols-sm-2 control-label">Username</label>
-				<div class="cols-sm-10">
-					<div class="input-group">
-						<span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-						<input type="text" class="form-control" name="username" id="username" ng-model="$ctrl.login.username"  placeholder="Enter your Username"/>
-						<div ng-messages="LoginForm.username.$error" role="alert" multiple="">
-					</div>
-				</div>
+		<div class="form-group">
+<h3 class="cols-sm-2 control-label">Enter your Account details</h3>
+</div>
+	<form name="userForm" novalidate>
+		<div class="form-group" ng-class="{ 'has-error': userForm.name.$touched && userForm.name.$invalid }">
+			<label for="password">Username</label>
+			<div class="input-group">
+				<span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+				<input type="text" name="name" class="form-control" ng-model="$ctrl.login.username" required>
 			</div>
-
-			<div class="form-group">
-				<label for="password" class="cols-sm-2 control-label">Password</label>
-				<div class="cols-sm-10">
-					<div class="input-group">
-						<span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-						<input type="password" class="form-control" name="password" id="password" ng-model="$ctrl.login.password"  placeholder="Enter your Password"/>
-					</div>
-				</div>
-			</div>
-
-			<div class="form-group ">
-				<button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-click="$ctrl.submit(); $ctrl.enterJourney()">Login</button>
-			</div>
-			<div class="login-register">
-				<p> <small> Don't have an account yet? </small></p>
-	      <a ng-click="$ctrl.getStarted()">Register</a>
-	    </div>
-		</form>
-
+			<div class="help-block" ng-messages="userForm.name.$error" ng-if="userForm.name.$touched">
+			<p ng-message="required"><b>Your name is required.</b></p>
+		</div>
 	</div>
+
+		<div class="form-group" ng-class="{ 'has-error': userForm.password.$touched && userForm.password.$invalid }">
+			<label for="password">Password</label>
+			<div class="input-group">
+				<span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+				<input type="text" name="password" class="form-control" ng-model="$ctrl.login.password" required>
+			</div>
+			<div class="help-block" ng-messages="userForm.password.$error" ng-if="userForm.password.$touched">
+			<p ng-message="required"><b>Your password is required.</b></p>
+		</div>
+	</div>
+
+	<div class="form-group ">
+		<button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-disabled="userForm.$invalid" ng-click="$ctrl.submit(); $ctrl.enterJourney()">Login</button>
+	</div>
+	<div class="login-register">
+		<p> <small> Don't have an account yet? </small></p>
+		<a ng-click="$ctrl.getStarted()">Register</a>
+	</div>
+</form>
+</div>
 </div>
