--- a/src/components/login-page/login-page.template.html
+++ b/src/components/login-page/login-page.template.html
@@ -9,7 +9,7 @@
 			<label for="password">Username</label>
 			<div class="input-group">
 				<span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-				<input type="text" name="name" class="form-control" ng-model="$ctrl.login.username" required>
+				<input type="text" name="name" class="form-control" ng-model="$ctrl.login.username" placeholder="Enter your Username" required>
 			</div>
 			<div class="help-block" ng-messages="userForm.name.$error" ng-if="userForm.name.$touched">
 			<p ng-message="required"><b>Your name is required.</b></p>
@@ -20,12 +20,13 @@
 			<label for="password">Password</label>
 			<div class="input-group">
 				<span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-				<input type="text" name="password" class="form-control" ng-model="$ctrl.login.password" required>
+				<input type="password" name="password" class="form-control" ng-model="$ctrl.login.password" placeholder="Enter your Password" required>
 			</div>
 			<div class="help-block" ng-messages="userForm.password.$error" ng-if="userForm.password.$touched">
 			<p ng-message="required"><b>Your password is required.</b></p>
 		</div>
 	</div>
+	<div class="errormessage"> {{$ctrl.errormessage}}</div>
 
 	<div class="form-group ">
 		<button type="button" class="btn btn-primary btn-lg btn-block login-button" ng-disabled="userForm.$invalid" ng-click="$ctrl.submit(); $ctrl.enterJourney()">Login</button>
@@ -34,6 +35,8 @@
 		<p> <small> Don't have an account yet? </small></p>
 		<a ng-click="$ctrl.getStarted()">Register</a>
 	</div>
+
+
 </form>
 </div>
 </div>
